--- a/project-4/src/component/Page/Home/Home.css
+++ b/project-4/src/component/Page/Home/Home.css
@@ -2,24 +2,37 @@
     margin:0 ;
     padding: 0%;
 }
-.container
-{
-    width: 100%;
-    height: 100vh;
-    padding: 2px;
-}
+
 .Main{
     width: 100%;
     height: 500px;
-    background-color: blueviolet;
+    background-color: rgb(121, 107, 134);
+    margin: 0px;
+    padding: 0px;
+    width:;
 }
 .Main2{
     width: 100%;
     height: 500px;
     background-color: aqua;
 }
-.card{
-    width: 400px;
-    height: 300px;
-    margin: 20%;
+
+.carousel{
+    height: 500px;
+}
+.carousel img{
+    width: 100%;
+    height: 500px;
+}
+.content{
+    margin-top: 50px;
+   
+}
+.content li{
+    padding-left: 200px;
+    background-color: #0082e6;
+    font-size: 25px;
+    color:beige;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
 }
