--- a/project-4/src/component/Page/Login/Login.css
+++ b/project-4/src/component/Page/Login/Login.css
@@ -8,7 +8,7 @@ body
 	justify-content: center;
 	align-items: center;
 	background: #03a9f4;
-	transition: 0.5s;
+	
 }
 body.active
 {
@@ -16,66 +16,38 @@ body.active
 }
 
 .main{
-    width: 500px;
+    width: 100%;
     height: 600px;
 	border: 3px salmon;
 }
 
 .container
 {
-	position: relative;
+
 	width: 100%;
 	height: 500px;
 	margin: 20px;
 }
 .form
 {
-	position: absolute;
+	
 	display: flex;
 	justify-content: center;
-	top: 40px;
+
 	width: 100%;
 	height: 420px;
-	background: rgba(255,255,255,0.2);
-	box-shadow: 0 5px 45 rgba(0,0,0,0.15);
+	background: rgba(255,255,255,0.2);	
 }
-.form .box
-{
-	position: relative;
-	width: 50%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
 
-}
-.form .box h2
-{
-	color: #fff;
-	font-size: 1.2em;
-	font-weight: 500;
-	margin-bottom: 10px;
-}
-.form .box button
-{
-	cursor: pointer;
-	padding: 10px 20px;
-	background: #fff;
-	color: #333;
-	font-size: 16px;
-	font-weight: 500;
-	border: none;
-}
 .formBox
 {
 	position: absolute;
-	top: 0;
-	left:0;
-	width: 50%;
-	height: 100%;
-	background: #fff;
-	z-index: 1000;
+	top: 40;
+
+	width: 60%;
+	height:fit-content;
+	background: rgb(44, 114, 180);
+
 	display: flex;
 	transition: 0.5s;
 	justify-content: center;
@@ -83,30 +55,18 @@ body.active
 	box-shadow: 0 5px 45px rgba(0,0,0.25);
 	overflow: hidden;
 }
-.formBox.active
-{
-	left: 50%;
 
-}
 .formBox .form_login
 {
-	position: absolute;
+	
 	left:0;
 	width: 100%;
 	padding: 50px;
 	transition: 0.5%;
 }
-.formBox.active .signinForm
-{
-	transition-delay: 0.25s;
-}
-.formBox.active .signinForm
-{
-	left: -100%; 
-	transition-delay: 0;
-}
 
-/*Register form*/
+
+/Register form/
 .formBox .signupForm
 {
 	left: 100%; 
@@ -114,7 +74,7 @@ body.active
 .formBox.active .signupForm
 {
 	left: 0; 
-	transition-delay: 0.25s;
+	
 }
 .formBox .form_login form
 {
@@ -134,7 +94,7 @@ body.active
 	width: 100%;
 	margin-bottom: 20px;
 	padding: 10px;
-	outline: none;
+	
 	font-size: 16px;
 	border: 1px solid #333;
 }
@@ -144,7 +104,7 @@ body.active
 	border: none;
 	color: #fff;
 	width: 100px;
-	cursor: pointer;
+
 }
 .formBox .form_login form .forgot
 {
